testsuite/tests/ghci/prog011/prog011.stderr

prog011.hx:14:22: error:
    Empty 'do' block
    Suggested fix: Perhaps you intended to use NondecreasingIndentation
